# sahaidachny

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  PLANNING.md  README.md  pyproject.toml  saha.sh
.claude/: mcp.json  settings.json  templates
.claude/agents/: execution-code-quality.md  execution-dod.md  execution-implementer.md  execution-manager.md  execution-qa-playwright.md  execution-qa.md  execution-test-critique.md  execution_dod.md  execution_implementer.md  execution_manager.md  execution_qa.md  planning_research.md  planning_reviewer.md
.claude/commands/: saha.md  saha:contracts.md  saha:decide.md  saha:init.md  saha:plan.md  saha:research.md  saha:status.md  saha:stories.md  saha:task.md  saha:test-specs.md  saha:verify.md
.claude/scripts/: help.sh  init_task.sh  welcome.sh
.github/workflows/: ci.yml  publish.yml
.sahaidachny/: current-task
claude_plugin/: __init__.py  settings.json
claude_plugin/.claude-plugin/: plugin.json
claude_plugin/agents/: execution-code-quality.md  execution-dod.md  execution-implementer.md  execution-qa.md  execution-test-critique.md  execution_implementer.md  execution_manager.md  execution_qa.md  planning_research.md
claude_plugin/commands/: contracts.md  decide.md  init.md  plan.md  research.md  saha.md  status.md  stories.md  task.md  test-specs.md  verify.md
claude_plugin/scripts/: help.sh  init_task.sh
claude_plugin/templates/: api-contract-event.md  api-contract-rest.md  design-decision.md  implementation-phase.md  research-report.md  task-description.md  test-spec-e2e.md  test-spec-integration.md  ui-design.md  user-story.md
docs/: architecture.md  claude-code-plugins.md  user-guide.md
docs/improvements/: test-critique-enhancement.md
docs/proposals/: multi-cli-artifacts.md
examples/: multi-cli-planning.md
saha/: __init__.py  cli.py  context.py  logging.py
saha/commands/: __init__.py  common.py  execution.py  plugin.py
saha/config/: __init__.py  settings.py
saha/hooks/: __init__.py  base.py  notification.py  registry.py
saha/models/: __init__.py  result.py  state.py
saha/orchestrator/: __init__.py  factory.py  loop.py  plan_progress.py  state.py
saha/runners/: __init__.py  _utils.py  base.py  claude.py  codex.py  gemini.py  intelligent_mock.py  registry.py  usage.py
saha/schemas/: __init__.py  agent_outputs.py
saha/tools/: __init__.py  complexity.py  pytest_runner.py  registry.py  ruff.py  ty.py
saha/verification/: __init__.py  (+1 more)
task_tracker/: models.py
(+76 files in other folders)
