[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sahaidachny"
version = "0.5.0"
description = "Hierarchical task planning and autonomous agentic execution for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Roman Romanov" }]
keywords = ["ai", "agents", "task-planning", "claude", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "testcontainers>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
tools = [
    "ruff>=0.5",
    "ty>=0.0.1",
    "complexipy>=0.4",
]
anthropic = [
    "anthropic>=0.40.0",
]

[project.scripts]
saha = "saha.cli:main"

[project.urls]
Repository = "https://github.com/romanromanov/sahaidachny"

[tool.hatch.build.targets.wheel]
packages = ["saha", "task_tracker", "claude_plugin"]
# Include all non-Python files in claude_plugin
artifacts = [
    "claude_plugin/**/*.md",
    "claude_plugin/**/*.sh",
    "claude_plugin/**/*.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "saha/",
    "task_tracker/",
    "claude_plugin/",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["saha", "task_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "complexipy>=5.1.0",
]
